--- a/index.html
+++ b/index.html
@@ -10,5 +10,18 @@
 <body>
   <h1>Calculadora JavaScript</h1>
   <p class="perigo">Não divida NADA por zero</p>
+
+  <div id="calculadora" class="calculadora">
+    <button id="limpar">C</button>
+    <button id="backspace">⌫</button>
+
+    <div id="visor" class="visor">0</div>
+
+    <button class="numero">7</button>
+    <button class="numero">8</button>
+    <button class="numero">9</button>
+    <button data-ops="multi">X</button>
+
+  </div>
 </body>
 </html>
