--- a/index.html
+++ b/index.html
@@ -1,27 +1,43 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <link rel="stylesheet" href="src/css/stylesheet.css">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Calculadora JavaScript</title>
-</head>
-<body>
-  <h1>Calculadora JavaScript</h1>
-  <p class="perigo">Não divida NADA por zero</p>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <link rel="stylesheet" href="src/css/stylesheet.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Calculadora JavaScript</title>
+  </head>
+  <body>
+    <h1>Calculadora JavaScript</h1>
+    <p class="perigo">Não divida NADA por zero</p>
 
-  <div id="calculadora" class="calculadora">
-    <button id="limpar">C</button>
-    <button id="backspace">⌫</button>
+    <div id="calculadora" class="calculadora">
+      <button id="limpar">C</button>
+      <button id="backspace">⌫</button>
 
-    <div id="visor" class="visor">0</div>
+      <div id="visor" class="visor">0</div>
 
-    <button class="numero">7</button>
-    <button class="numero">8</button>
-    <button class="numero">9</button>
-    <button data-ops="multi">X</button>
+      <button class="numero" data-numero="7">7</button>
+      <button class="numero" data-numero="8">8</button>
+      <button class="numero" data-numero="9">9</button>
+      <button data-ops="multi" class="calculo">X</button>
 
-  </div>
-</body>
+      <button class="numero" data-numero="4">4</button>
+      <button class="numero" data-numero="5">5</button>
+      <button class="numero" data-numero="6">6</button>
+      <button data-ops="soma" class="calculo">+</button>
+
+      <button class="numero" data-numero="1">1</button>
+      <button class="numero" data-numero="2">2</button>
+      <button class="numero" data-numero="3">3</button>
+      <button data-ops="sub" class="calculo">-</button>
+
+      <button class="numero" data-numero="0">0</button>
+      <button class="numero" data-numero=".">.</button>
+      <button class="igualA" id="igualA" data-resultado="">=</button>
+      <button data-ops="divisao" class="calculo">/</button>
+    </div>
+    <button id="reiniciar" class="reiniciar">Reiniciar o Universo?</button>
+  </body>
+  <script src="src/js/script.js"></script>
 </html>
