adicionando footer + novos operadores

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <button class="numero" data-numero="7">7</button>
       <button class="numero" data-numero="8">8</button>
       <button class="numero" data-numero="9">9</button>
-      <button data-ops="vezes" class="calculo">X</button>
+      <button data-ops="vezes" class="calculo">×</button>
 
       <button class="numero" data-numero="4">4</button>
       <button class="numero" data-numero="5">5</button>
@@ -40,9 +40,20 @@
       <button class="numero" data-numero="0">0</button>
       <button class="numero" data-numero=".">.</button>
       <button class="igualA" id="igualA" data-resultado="">=</button>
-      <button data-ops="dividido" class="calculo">/</button>
+      <button data-ops="dividido" class="calculo">÷</button>
     </div>
     <button id="reiniciar" class="reiniciar">Reiniciar o Universo?</button>
+    <footer>
+      <div class="copyright">
+        by
+        <a
+          href="https://github.com/Je-Carlos"
+          target="_blank"
+          rel="noopener noreferrer"
+          >Jean Carlos</a
+        >.
+      </div>
+    </footer>
   </body>
   <script src="src/js/script.js"></script>
 </html>
